--- a/src/VisualStudioBuildScriptGenerator/packages.config
+++ b/src/VisualStudioBuildScriptGenerator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="6.6.3" targetFramework="net40" developmentDependency="true" />
+  <package id="Ookii.Dialogs.Wpf" version="4.0.0" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="3.4.1" targetFramework="net40" />
 </packages>
